@@ -232,6 +232,10 @@ Release 0.22b.dev (unpublished)
      Obsolete in Python 3
   `docutils.utils.Reporter.set_conditions()`
      Obsolete. Set attributes via configuration settings or directly.
+  `docutils.parsers.rst.directives.tables.CSVTable.decode_from_csv()`
+     not required with Python 3
+  `docutils.parsers.rst.directives.tables.CSVTable.encode_from_csv()`
+     not required with Python 3
 
 * Removed files:
 
